--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "axios": "^1.6.0",
     "express": "^4.19.0",
     "node-cron": "^3.0.3",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "cors": "^2.8.5"
   }
 }
+
