Add cheerio dependency to package.json

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "express": "^4.19.0",
     "node-cron": "^3.0.3",
     "sqlite3": "^5.1.7",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "cheerio": "^1.0.0-rc.12"
   }
 }
+
 
