--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
   "name": "silver-backend",
   "version": "1.0.0",
-  "main": "index.js",
   "type": "module",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "axios": "^1.6.0",
-    "express": "^4.19.0",
-    "node-cron": "^3.0.3",
-    "sqlite3": "^5.1.7",
+    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "cheerio": "^1.0.0-rc.12"
+    "sqlite3": "^5.1.6",
+    "node-cron": "^3.0.2"
   }
 }
-
-
