--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "sqlite3": "^5.1.6",
+    "sqlite": "^4.1.0",
     "node-cron": "^3.0.2"
   }
 }
+
